tests/snapshots/cli__show_format_storage_card_is_deeply_nested.snap
---
source: tests/cli.rs
info:
  program: losrs
  args:
    - show
    - /tmp/.tmp5Edr9D
  envs:
    LOSRS__OUTPUT__FORMAT: storage
  page_lines:
    - - "- Not card"
      - "- induction"
      - "  - Automatically generated induction principles for Inductive Types (in general)"
      - "    - What kind of function is a generated induction principle function (similarity, not implimentation)? #card"
      - "      card-last-score:: 5"
      - "      card-repeats:: 6"
      - "      card-next-schedule:: 2026-01-25T00:00:00.000Z"
      - "      card-last-interval:: 244.14"
      - "      card-ease-factor:: 3.5"
      - "      card-last-reviewed:: 2025-05-26T09:11:31.735Z"
      - "      - Fixpoint"
      - "- Not card"
      - ""
---
success: true
exit_code: 0
----- stdout -----
    - What kind of function is a generated induction principle function (similarity, not implimentation)? #card
      card-last-interval:: 244.14
      card-repeats:: 6
      card-ease-factor:: 3.5
      card-next-schedule:: 2026-01-25T00:00:00.000Z
      card-last-reviewed:: 2025-05-26T09:11:31.735Z
      card-last-score:: 5
      card-fsrs-metadata:: {"due":"2026-01-25T00:00:00Z","stability":244.14,"difficulty":5.0,"elapsed_days":244,"scheduled_days":244,"reps":6,"lapses":0,"state":"Review","last_review":"2025-05-26T09:11:31.735Z"}
      - Fixpoint

----- stderr -----
